--- a/tests/fixtures/render_service_template/output/instance-ha/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/instance-ha/ussuri_ceph_local_non_dvr.yaml
@@ -4,6 +4,9 @@ spec:
     name: openstack-masakari
     values:
       conf:
+        libvirt:
+          tls: False
+          interface: ens3
         policy.d:
           01-controller-default.yaml: {'instance-ha_rule1': 'instance-ha_value1'}
           02-custom.yaml: {}
