Load dpdk driver in openvswitch chart
Change-Id: I8256069c2fc32272eb6a02696853c14c11a2062f
Related-Prod: https://mirantis.jira.com/browse/PRODX-38636

--- a/openstack_controller/templates/services/networking.yaml
+++ b/openstack_controller/templates/services/networking.yaml
@@ -361,6 +361,7 @@ spec:
                 conf:
                   ovs_dpdk:
                     enabled: true
+                    driver: {{ override.dpdk.driver }}
                     hugepages_mountpath: /dev/hugepages
                     socket_memory: {{ socket_memory }}
                     vhostuser_socket_dir: vhostuser
