Enable permit auto converge for live migration by default
Automatically throttling the instance’s CPU when memory copy
delays are detected to help migrate them.

Related-Prod: PRODX-38602
Change-Id: Ia79e70b1fedfc2ed54d663d028d8c282ace457be

--- a/openstack_controller/templates/services/compute.yaml
+++ b/openstack_controller/templates/services/compute.yaml
@@ -878,6 +878,7 @@ spec:
             cpu_mode: custom
             cpu_models: {{ vcpu_type }}
 {%- endif %}
+            live_migration_permit_auto_converge: true
 {%- if libvirt_server_tls_enabled %}
             live_migration_scheme: tls
             live_migration_with_native_tls: true
