--- a/tests/fixtures/render_service_template/output/compute/queens_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/compute/queens_ceph_local_non_dvr.yaml
@@ -118,6 +118,7 @@ spec:
             images_type: qcow2
             rbd_user: nova
             virt_type: kvm
+            live_migration_permit_auto_converge: true
           neutron:
             metadata_proxy_shared_secret: mN0aLDTcg1AVqyLWNDjCd2Jz6DA61cZJ
           audit_middleware_notifications:
