--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_ceph_non_dvr_rmq.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_ceph_non_dvr_rmq.yaml
@@ -217,6 +217,7 @@ spec:
             images_type: rbd
             rbd_user: nova
             virt_type: kvm
+            live_migration_permit_auto_converge: true
           neutron:
             metadata_proxy_shared_secret: mN0aLDTcg1AVqyLWNDjCd2Jz6DA61cZJ
           os_vif_ovs:
