--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_lvm_non_dvr_node_specific.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_lvm_non_dvr_node_specific.yaml
@@ -175,6 +175,7 @@ spec:
             images_volume_group: 'custom-group'
             rbd_user: nova
             virt_type: kvm
+            live_migration_permit_auto_converge: true
           neutron:
             metadata_proxy_shared_secret: mN0aLDTcg1AVqyLWNDjCd2Jz6DA61cZJ
           audit_middleware_notifications:
