Remove volume pods from detendecy for bootstarsp and drop volume jobs
In the new version of Cinder chart the jobs bootstarap and
drop_default_volume_type are waiting for ready all Cinder
backends before they will start

Ralated-Prod: PRODX-38518
Change-Id: I6f15df8fe8cc4a1faa865a3961a7fb05baf24b41

--- a/openstack_controller/templates/services/block-storage.yaml
+++ b/openstack_controller/templates/services/block-storage.yaml
@@ -72,6 +72,7 @@ spec:
     "cinder_volume_daemonset",
     "cinder_drop_default_volume_type",
     "cinder_create_internal_tenant",
+    "cinder_wait_for_backends",
     "test",] %}
         {%- if image in images %}
           {{ image }}: {{ images[image] }}
@@ -82,20 +83,6 @@ spec:
           db_init:
             jobs:
               - openstack-mariadb-cluster-wait
-{%- if not is_ceph_enabled %}
-          bootstrap:
-            pod:
-              - requireSameNode: false
-                labels:
-                  application: cinder
-                  component: volume_daemonset
-          drop_default_volume_type:
-            pod:
-              - requireSameNode: false
-                labels:
-                  application: cinder
-                  component: volume_daemonset
-{%- endif %}
       pod:
         replicas:
           api: 1
