--- a/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_non_dvr_adv.yaml
+++ b/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_non_dvr_adv.yaml
@@ -517,6 +517,25 @@ spec:
                         vhostuser_socket_dir: /var/run/openvswitch/vhostuser
       pod:
         probes:
+          server:
+            server:
+              readiness:
+                enabled: true
+                params:
+                  periodSeconds: 15
+                  timeoutSeconds: 15
+              liveness:
+                enabled: true
+                params:
+                  initialDelaySeconds: 60
+                  periodSeconds: 30
+                  timeoutSeconds: 30
+              startup:
+                enabled: true
+                params:
+                  periodSeconds: 30
+                  successThreshold: 1
+                  timeoutSeconds: 30
           dhcp_agent:
             dhcp_agent:
               liveness:
