Skip one new test when sig verification is on
`test_minimum_basic_instance_hard_reboot_after_vol_snap_deletion`
is a new test in Antelope, next to `test_minimum_basic_scenario`
that we already skip when image signature verification is enabled
in Nova.
These tests can not work in such environmants since they both
create the image in Glance as part of the test, and do not sign it.

Closes-Issue: PRODX-37477
Change-Id: I3944a69a6a9c0e65eb04359f2e20ca6bf464896a

--- a/openstack_controller/templates/preset/compute.yaml
+++ b/openstack_controller/templates/preset/compute.yaml
@@ -268,6 +268,7 @@ services:
             - (?:tempest.scenario.test_shelve_instance.TestShelveInstance.test_shelve_instance)
             # Skip TESTs failed, that don't work with signature verification enabled
             - (?:tempest.scenario.test_minimum_basic.TestMinimumBasicScenario.test_minimum_basic_scenario)
+            - (?:tempest.scenario.test_minimum_basic.TestMinimumBasicScenario.test_minimum_basic_instance_hard_reboot_after_vol_snap_deletion)
             - (?:tempest.scenario.test_snapshot_pattern.TestSnapshotPattern.test_snapshot_pattern)
             - (?:tempest.scenario.test_stamp_pattern.TestStampPattern.test_stamp_pattern)
             # SKIPPED: multi-cloud feature is not configured in our CI
