--- a/openstack_controller/templates/size/tiny.yaml
+++ b/openstack_controller/templates/size/tiny.yaml
@@ -259,9 +259,11 @@ services:
             upgrades:
               daemonsets:
                 ovn_controller:
+                  enabled: true
                   pod_replacement_strategy: OnDelete
                   max_unavailable: 1
                 ovs_vswitchd:
+                  enabled: true
                   pod_replacement_strategy: OnDelete
                   max_unavailable: 1
   block-storage:
