Skip serial tests to decrease tempest run time
Serial tests currently can block tests execution for up to
8 hours. So skip serial tests, while we search the proper way
to run them to not block other tests.

Related-Prod: https://mirantis.jira.com/browse/PRODX-38846
Change-Id: Ie18f89e35b41b577ddbee2a29c3e39a7cf83ec76

--- a/openstack_controller/templates/preset/compute.yaml
+++ b/openstack_controller/templates/preset/compute.yaml
@@ -285,6 +285,8 @@ services:
           {%- if not openstack_yoga_plus %}
             - (?:tempest.api.image.v2.test_images.ImportImagesTest.test_image_glance_direct_import)
           {%- endif %}
+            # PRODX-38846 - can be unskipped when serial tests will run in a way that doesn't blocks other tests.
+            - (?:tempest.serial_tests)
             # Tests NOT supported by product
 {% include 'base/_tempest_blacklist_no_supported.yaml' %}
           script: |
