--- a/tests/fixtures/render_service_template/output/networking/queens_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/networking/queens_ceph_local_non_dvr.yaml
@@ -407,6 +407,17 @@ spec:
           restartPolicy: Never
         ks_user:
           restartPolicy: Never
+      kernel:
+        modules:
+          l3_agent:
+            ip6_tables:
+              enabled: true
+          dhcp_agent:
+            ip6_tables:
+              enabled: true
+          lb_agent:
+            ip6_tables:
+              enabled: true
       manifests:
         job_rabbit_init: false
         network_policy: false
