--- a/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -474,6 +474,17 @@ spec:
                 component: server
             policyTypes:
             - Ingress
+      kernel:
+        modules:
+          l3_agent:
+            ip6_tables:
+              enabled: true
+          dhcp_agent:
+            ip6_tables:
+              enabled: true
+          lb_agent:
+            ip6_tables:
+              enabled: true
       manifests:
         job_rabbit_init: false
         network_policy: true
