--- a/setup.cfg
+++ b/setup.cfg
@@ -26,10 +26,9 @@ setup_requires =
 [files]
 packages =
     openstack_controller
-data_files =
-    openstack_controller/admission/schemas.json = openstack_controller/admission/schemas.json
-    etc/openstack-controller =
-        etc/openstack-controller/01-controller-default.ini
+
+[options.packages.find]
+where = etc
 
 [entry_points]
 console_scripts =
