--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ setenv =
     # TODO(vsaienko): figure out why not working with default
     SETUPTOOLS_ENABLE_FEATURES="legacy-editable"
     NODE_IP="127.0.0.1"
+    OSCTL_LOGGING_CONF_FILE={toxinidir}/etc/openstack-controller/logging.conf
 commands =
     pytest {posargs:tests openstack_controller/osctl/tests/unit -vv -n auto}
 
@@ -61,6 +62,7 @@ deps =
     .
 setenv =
     PYTHONWARNINGS=ignore:Unverified HTTPS request
+    OSCTL_LOGGING_CONF_FILE={toxinidir}/etc/openstack-controller/logging.conf
 passenv =
     HOME
     KOPF_*
