Improve configuring logging
Configure logging via chart values as a dedicated option
.Values.osctl.logging.conf

Related-Prod: PRODX-34914
Change-Id: I350fc397dfd7119743e68858485841db1d0cd5b5

--- a/charts/openstack-operator/templates/openstack-controller.yaml
+++ b/charts/openstack-operator/templates/openstack-controller.yaml
@@ -35,6 +35,8 @@ metadata:
     helm.sh/chart: {{ include "openstack-controller.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+  annotations:
+    openstack-controller-etc-hash: {{ tuple "openstack-controller-configmap-etc.yaml" . | include "opentsack-controller.utils.hash" }}
 spec:
   replicas: {{ .Values.replicaCount }}
   # Make sure old operator gone to prevent that old version start
@@ -113,6 +115,9 @@ spec:
               mountPath: /etc/openstack/
             - name: openstack-controller-config
               mountPath: /etc/openstack-controller/conf.d/
+            - name: openstack-controller-etc
+              mountPath: /etc/openstack-controller/logging.conf
+              subPath: logging.conf
         - name: secrets
           image: {{ tuple . .Values.image | include "getImageUrl" }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -155,6 +160,9 @@ spec:
               mountPath: /etc/openstack/
             - name: openstack-controller-config
               mountPath: /etc/openstack-controller/conf.d/
+            - name: openstack-controller-etc
+              mountPath: /etc/openstack-controller/logging.conf
+              subPath: logging.conf
         - name: health
           image: {{ tuple . .Values.image | include "getImageUrl" }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -197,6 +205,9 @@ spec:
               mountPath: /etc/openstack/
             - name: openstack-controller-config
               mountPath: /etc/openstack-controller/conf.d/
+            - name: openstack-controller-etc
+              mountPath: /etc/openstack-controller/logging.conf
+              subPath: logging.conf
         - name: node
           image: {{ tuple . .Values.image | include "getImageUrl" }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -239,6 +250,9 @@ spec:
               mountPath: /etc/openstack/
             - name: openstack-controller-config
               mountPath: /etc/openstack-controller/conf.d/
+            - name: openstack-controller-etc
+              mountPath: /etc/openstack-controller/logging.conf
+              subPath: logging.conf
 {{ if .Values.node_maintenance.enabled }}
         - name: nodemaintenancerequest
           image: {{ tuple . .Values.image | include "getImageUrl" }}
@@ -258,8 +272,6 @@ spec:
           env:
             - name: OSCTL_HEARTBEAT_PEERING_OBJECT_NAME
               value: openstack-controller.nodemaintenancerequest
-            - name: OSCTL_LOGGING_CONF
-              value: '{{ toJson .Values.osdpl.settings.node_maintenance_request.OSCTL_LOGGING_CONF }}'
             {{- range $optionName, $optionValue := .Values.osdpl.settings.raw }}
             - name: {{ $optionName }}
               value: "{{ $optionValue }}"
@@ -284,6 +296,9 @@ spec:
               mountPath: /etc/openstack/
             - name: openstack-controller-config
               mountPath: /etc/openstack-controller/conf.d/
+            - name: openstack-controller-etc
+              mountPath: /etc/openstack-controller/logging.conf
+              subPath: logging.conf
 {{ end }}
         - name: ceph-secrets
           image: {{ tuple . .Values.image | include "getImageUrl" }}
@@ -323,6 +338,9 @@ spec:
               mountPath: /etc/openstack/
             - name: openstack-controller-config
               mountPath: /etc/openstack-controller/conf.d/
+            - name: openstack-controller-etc
+              mountPath: /etc/openstack-controller/logging.conf
+              subPath: logging.conf
         - name: osdplstatus
           image: {{ tuple . .Values.image | include "getImageUrl" }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -407,6 +425,9 @@ spec:
               mountPath: /etc/openstack/
             - name: openstack-controller-config
               mountPath: /etc/openstack-controller/conf.d/
+            - name: openstack-controller-etc
+              mountPath: /etc/openstack-controller/logging.conf
+              subPath: logging.conf
         - name: tf-secrets
           image: {{ tuple . .Values.image | include "getImageUrl" }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -445,6 +466,9 @@ spec:
               mountPath: /etc/openstack/
             - name: openstack-controller-config
               mountPath: /etc/openstack-controller/conf.d/
+            - name: openstack-controller-etc
+              mountPath: /etc/openstack-controller/logging.conf
+              subPath: logging.conf
       volumes:
         - name: openstack-controller-config
           configMap:
@@ -454,6 +478,10 @@ spec:
           secret:
             secretName: keystone-os-clouds
             defaultMode: 365
+        - name: openstack-controller-etc
+          configMap:
+            name: openstack-controller-etc
+            defaultMode: 0555
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
