Fix bug with tox test running:
* Add a variable "OSCTL_LOGGING_CONF_FILE" in tox.inito fix bug with FileNotFoundError /etc/openstack-controller/logging.con

Related-prod: PRODX-3456
Change-Id: I93844141148c7b6bcadda4695044e1b0641f2a81

--- a/tox.ini
+++ b/tox.ini
@@ -111,6 +111,7 @@ changedir =  {toxinidir}/openstack_controller/tests
 passenv =
     KUBECONFIG
 setenv =
+  OSCTL_LOGGING_CONF_FILE={toxinidir}/etc/openstack-controller/logging.conf
   OS_CLIENT_CONFIG_FILE=/tmp/clouds_functional.yaml
   OS_CLOUD=admin
 commands =
