Allow 0.0.0.0/0 for admission controller
When kubeapi is running on same node as admission controller,
request comes from docker pod range. Since we do not have it
in the globals now, whitelist everything temporary.

Related-Prod: PRODX-39369
Change-Id: I96c050d23f731b6e8b2c1e3d3ca8dd52c714e084

--- a/charts/openstack-operator/templates/admission-controller-network-policy.yaml
+++ b/charts/openstack-operator/templates/admission-controller-network-policy.yaml
@@ -12,6 +12,10 @@ spec:
     - ipBlock:
         cidr: {{ .cidr }}
 {{- end }}
+    # NOTE(vsaienko): for combined CP case when kubeapi reach admission running on
+    # local node PRODX-39369
+    - ipBlock:
+        cidr: 0.0.0.0/0
     ports:
     - port: {{ .Values.admission.settings.raw.OSCTL_ADMISSION_BIND_PORT }}
       protocol: TCP
