--- a/tests/fixtures/render_service_template/output/networking/victoria_ceph_local_ovn_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/networking/victoria_ceph_local_ovn_non_dvr.yaml
@@ -314,6 +314,7 @@ spec:
             enforce_scope: false
           ovn:
             enable_distributed_floating_ip: False
+            dns_servers: 10.172.1.100
           nova:
             live_migration_events: True
           ironic:
