Set dns_nameservers for ovn
Related-Prod: PRODX-39389
Change-Id: I605cd917362adaa56334009a49463a4882e71539

--- a/openstack_controller/templates/services/networking.yaml
+++ b/openstack_controller/templates/services/networking.yaml
@@ -796,6 +796,9 @@ spec:
           {%- if ovn_enabled %}
           ovn:
             enable_distributed_floating_ip: {{ spec.get('features', {}).get('neutron', {}).get('dvr', {}).get('enabled', False) }}
+            {%- if spec.get('features', {}).get('neutron', {}).get('dns_servers', []) %}
+            dns_servers: {{ spec.features.neutron.dns_servers |join(',') }}
+            {%- endif %}
           {%- endif %}
           cache:
             backend: oslo_cache.memcache_pool
