--- a/openstack_controller/templates/queens/artifacts.yaml
+++ b/openstack_controller/templates/queens/artifacts.yaml
@@ -217,3 +217,4 @@ requirements: '{{ images_base_url }}/openstack/requirements:queens-bionic-202302
 designate_pool_manage: '{{ images_base_url }}/openstack/designate:queens-bionic-20230227093206'
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240129060018'
 ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240129060018'
+cinder_wait_for_backends: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240129060018'
