--- a/openstack_controller/templates/ussuri/artifacts.yaml
+++ b/openstack_controller/templates/ussuri/artifacts.yaml
@@ -224,3 +224,4 @@ requirements: '{{ images_base_url }}/openstack/requirements:ussuri-bionic-202302
 designate_pool_manage: '{{ images_base_url }}/openstack/designate:ussuri-bionic-20230227093206'
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240129060018'
 ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240129060018'
+cinder_wait_for_backends: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240129060018'
