--- a/openstack_controller/templates/antelope/artifacts.yaml
+++ b/openstack_controller/templates/antelope/artifacts.yaml
@@ -232,3 +232,4 @@ requirements: '{{ images_base_url }}/openstack/requirements:antelope-jammy-20240
 designate_pool_manage: '{{ images_base_url }}/openstack/designate:antelope-jammy-20240202140750'
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240202140749'
 ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240202140749'
+cinder_wait_for_backends: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240202140749'
