--- a/openstack_controller/templates/train/artifacts.yaml
+++ b/openstack_controller/templates/train/artifacts.yaml
@@ -218,3 +218,4 @@ requirements: '{{ images_base_url }}/openstack/requirements:train-bionic-2023022
 designate_pool_manage: '{{ images_base_url }}/openstack/designate:train-bionic-20230227093206'
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240115142802'
 ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240115142802'
+cinder_wait_for_backends: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240115142802'
