Set one Etcd replica for env single size
Related-Prod: PRODX-39329
Change-Id: I920d01303bfb286e3e7a5e514cf80a7b951c361a

--- a/openstack_controller/templates/size/single.yaml
+++ b/openstack_controller/templates/size/single.yaml
@@ -457,7 +457,12 @@ services:
           replicas:
             api: 1
             engine: 1
-
+  coordination:
+    etcd:
+      values:
+        pod:
+          replicas:
+            etcd: 1
 timeouts:
   application_readiness:
     mariadb:
