Expose raw image type for nova backends
Related-Prod: PRODX-39351

Change-Id: Ic20506d4fa68c3eac857ee903cf114b8732879f9

--- a/openstack_controller/admission/validators/schemas/nodes.yaml
+++ b/openstack_controller/admission/validators/schemas/nodes.yaml
@@ -66,12 +66,18 @@ patternProperties:
                 type: object
                 properties:
                   backend:
-                    description: Backend for nova images can be ceph, local or lvm
+                    description: |
+                      Backend for nova images can be:
+                        - local: qcow2 image type
+                        - ceph: rbd image type
+                        - lvm: lvm image type
+                        - raw: raw image type
                     type: string
                     enum:
                       - local
                       - ceph
                       - lvm
+                      - raw
                   encryption:
                     type: object
                     properties:
