Add support of neutron portprober extension
Allow to enable portprober neutron extension for:
  - non tf environments
  - openstack versions higher than antelope (including)

Related-Prod: PRODX-39925
Change-Id: I3b260a3c5671bb333ad2279639a06591a779b712

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -1140,6 +1140,15 @@ properties:
                     description: |
                         [Technology Preview] Enable BGP Dynamic Routing plugin/service
                         default: false
+              portprober:
+                type: object
+                additionalProperties: false
+                properties:
+                  enabled:
+                    type: boolean
+                    description: |
+                        [Technology Preview] Enable PortProber monitoring extension
+                        default: false
           baremetal:
             type: object
             additionalProperties: false
