--- a/openstack_controller/templates/master/artifacts.yaml
+++ b/openstack_controller/templates/master/artifacts.yaml
@@ -212,3 +212,4 @@ cirros_checksum: 1d3062cd89af34e419f7100277f38b2b
 fedora_checksum: e0713a4f26427691da90701ff7a823da
 ubuntu_checksum: 30d459e0dc0562e629d3683970e55efa
 ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:victoria-focal-20220926060015'
+neutron_portprober_agent: '{{ images_base_url }}/openstack/neutron:master-bionic-20210524060023'
