--- a/openstack_controller/templates/queens/artifacts.yaml
+++ b/openstack_controller/templates/queens/artifacts.yaml
@@ -218,3 +218,4 @@ designate_pool_manage: '{{ images_base_url }}/openstack/designate:queens-bionic-
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240212060019'
 ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240212060019'
 cinder_wait_for_backends: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240212060019'
+neutron_portprober_agent: '{{ images_base_url }}/openstack/neutron:queens-bionic-20230227093206'
