--- a/openstack_controller/templates/train/artifacts.yaml
+++ b/openstack_controller/templates/train/artifacts.yaml
@@ -219,3 +219,4 @@ designate_pool_manage: '{{ images_base_url }}/openstack/designate:train-bionic-2
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240212060019'
 ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240212060019'
 cinder_wait_for_backends: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240212060019'
+neutron_portprober_agent: '{{ images_base_url }}/openstack/neutron:train-bionic-20230227093206'
