--- a/openstack_controller/templates/ussuri/artifacts.yaml
+++ b/openstack_controller/templates/ussuri/artifacts.yaml
@@ -225,3 +225,4 @@ designate_pool_manage: '{{ images_base_url }}/openstack/designate:ussuri-bionic-
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240212060019'
 ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240212060019'
 cinder_wait_for_backends: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240212060019'
+neutron_portprober_agent: '{{ images_base_url }}/openstack/neutron:ussuri-bionic-20230227093206'
