--- a/openstack_controller/templates/wallaby/artifacts.yaml
+++ b/openstack_controller/templates/wallaby/artifacts.yaml
@@ -225,3 +225,4 @@ designate_pool_manage: '{{ images_base_url }}/openstack/designate:wallaby-focal-
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240212060019'
 ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240212060019'
 cinder_wait_for_backends: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240212060019'
+neutron_portprober_agent: '{{ images_base_url }}/openstack/neutron:wallaby-focal-20240112082933'
