--- a/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr_bgpvpn_vpnaas/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr_bgpvpn_vpnaas/context_spec.yaml
@@ -25,8 +25,10 @@ features:
   neutron:
     backend: ml2
     extensions:
-     vpnaas:
-       enabled: true
+      vpnaas:
+        enabled: true
+      portprober:
+        enabled: true
     bgpvpn:
       enabled: true
       as_number: 64512
