--- a/openstack_controller/templates/xena/artifacts.yaml
+++ b/openstack_controller/templates/xena/artifacts.yaml
@@ -225,3 +225,4 @@ designate_pool_manage: '{{ images_base_url }}/openstack/designate:xena-focal-202
 designate_pool_manage_hash: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240115142802'
 ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240115142802'
 cinder_wait_for_backends: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240115142802'
+neutron_portprober_agent: '{{ images_base_url }}/openstack/neutron:xena-focal-20240112082932'
